--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "private": true,
     "scripts": {
-        "dev:styles": "npx tailwindcss -i resources/css/plugin.css -o resources/dist/filament-daterangepicker-filter.css --postcss --watch",
+        "dev:styles": "npx tailwindcss -i resources/css/plugin.css -o resources/dist/css/filament-daterangepicker-filter.css --postcss --watch",
         "dev:scripts": "esbuild resources/js/plugin.js --bundle --sourcemap=inline --outfile=resources/dist/filament-daterangepicker-filter.js --watch",
-        "build:styles": "npx tailwindcss -i resources/css/plugin.css -o resources/dist/filament-daterangepicker-filter.css --postcss --minify && npm run purge",
-        "build:scripts": "esbuild resources/js/plugin.js --bundle --minify --outfile=resources/dist/filament-daterangepicker-filter.js",
+        "build:styles": "npx tailwindcss -i resources/css/plugin.css -o resources/dist/css/filament-daterangepicker-filter.css --postcss --minify && npm run purge",
+        "build:scripts": "esbuild resources/js/plugin.js --bundle --minify --outfile=resources/dist/js/filament-daterangepicker-filter.js",
         "purge": "filament-purge -i resources/dist/filament-daterangepicker-filter.css -o resources/dist/filament-daterangepicker-filter.css",
         "dev": "npm-run-all --parallel dev:*",
         "build": "npm-run-all build:*"
@@ -18,5 +18,9 @@
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
         "tailwindcss": "^3.1.6"
+    },
+    "dependencies": {
+        "jquery": "^3.6.4",
+        "moment": "^2.29.4"
     }
 }
