--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "private": true,
     "scripts": {
         "dev:styles": "npx tailwindcss -i resources/css/plugin.css -o resources/dist/css/filament-daterangepicker-filter.css --postcss --watch",
-        "dev:scripts": "esbuild resources/js/plugin.js --bundle --sourcemap=inline --outfile=resources/dist/filament-daterangepicker-filter.js --watch",
+        "dev:scripts": "esbuild resources/js/filament-daterangepicker.js --bundle --sourcemap=inline --outfile=resources/dist/filament-daterangepicker-filter.js --watch",
         "build:styles": "npx tailwindcss -i resources/css/plugin.css -o resources/dist/css/filament-daterangepicker-filter.css --postcss --minify && npm run purge",
-        "build:scripts": "esbuild resources/js/plugin.js --bundle --minify --outfile=resources/dist/js/filament-daterangepicker-filter.js",
-        "purge": "filament-purge -i resources/dist/filament-daterangepicker-filter.css -o resources/dist/filament-daterangepicker-filter.css",
+        "build:scripts": "esbuild resources/js/filament-daterangepicker.js --bundle --minify --outfile=resources/dist/js/filament-daterangepicker-filter.js",
+        "purge": "filament-purge -i resources/dist/css/filament-daterangepicker-filter.css -o resources/dist/css/filament-daterangepicker-filter.css",
         "dev": "npm-run-all --parallel dev:*",
         "build": "npm-run-all build:*"
     },
