--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
         "purge": "filament-purge -i dist/filament-daterangepicker.css -o dist/filament-daterangepicker.css"
     },
     "devDependencies": {
+        "@awcodes/filament-plugin-purge": "^1.0.1",
         "autoprefixer": "^10.1.0",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.49",
         "postcss": "^8.2.1",
-        "tailwindcss": "^3.0.23",
-        "@awcodes/filament-plugin-purge": "^1.0.1"
+        "tailwindcss": "^3.0.23"
     },
     "dependencies": {
         "jquery": "^3.6.4",
