--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": "^8.0",
         "filament/filament": "^2.0|^3.0",
         "spatie/laravel-package-tools": "^1.15",
-        "illuminate/contracts": "^8.0|^9.0|^10.0"
+        "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^7.0.0",
