--- a/composer.json
+++ b/composer.json
@@ -18,33 +18,14 @@
     "require": {
         "php": "^8.0",
         "filament/filament": "^2.0|^3.0",
-        "spatie/laravel-package-tools": "^1.15",
+        "spatie/laravel-package-tools": "^1.16.4",
         "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0"
-    },
-    "require-dev": {
-        "nunomaduro/collision": "^7.0.0",
-        "pestphp/pest": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.1",
-        "pestphp/pest-plugin-livewire": "^2.0",
-        "phpunit/phpunit": "^10.0.0",
-        "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
         "psr-4": {
             "Malzariey\\FilamentDaterangepickerFilter\\": "src",
             "Malzariey\\FilamentDaterangepickerFilter\\Database\\Factories\\": "database/factories"
         }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Malzariey\\FilamentDaterangepickerFilter\\Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        "test:pest": "vendor/bin/pest --parallel",
-        "test": [
-            "@test:pest"
-        ]
     },
     "config": {
         "sort-packages": true,
@@ -64,6 +45,6 @@
             }
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
