--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "filament/filament": "^2.0|^3.0",
+        "filament/filament": "^3.0",
         "spatie/laravel-package-tools": "^1.16.4",
         "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0"
     },
