--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "@awcodes/filament-plugin-purge": "^1.1.2",
         "autoprefixer": "^10.4.19",
         "esbuild": "^0.19.4",
-        "laravel-mix": "^6.0.49",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.40",
         "postcss-import": "^15.1.0",
@@ -24,6 +23,7 @@
     },
     "dependencies": {
         "jquery": "^3.7.1",
-        "moment": "^2.30.1"
+        "moment": "^2.30.1",
+        "postcss-nesting": "^13.0.0"
     }
 }
