--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "jquery": "^3.7.1",
         "moment": "^2.30.1",
+        "moment-timezone": "^0.5.46",
         "postcss-nesting": "^13.0.0"
     }
 }
