--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "filament/filament": "^3.0",
         "spatie/laravel-package-tools": "^1.16.4",
-        "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0"
+        "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0|^11.0|^12.0"
     },
     "autoload": {
         "psr-4": {
